
2022-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_check_string): replaced single string cache by an array
	  of caches using the string length as index; allowing much faster lookups
	* codegen.c (chk_field_variable_address): [not working -> disabled] draft
	  for speedup by not checking the same field multiple time

2022-05-30  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* help.c (cobc_print_usage_common_options): document new -std
	  dialect options gcos and gcos-strict
	* reserved.c (default_reserved_words): define words COMP-9,
	  COMP-10, and COMP-15, that are used by the GCOS dialect for
	  floating-point usages

2022-05-17  Ron Norman <rjn@inglenet.com>

	* codegen.c : emit original field offset in cob_symbol table

2022-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (transform_body): add full features of INSPECT CONVERTING
	  to TRANSFORM statement, adding optional CHARACTERS

2022-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_inspect): emit reduced cob_inspect_init_converting
	  without cob_inspect_finish for INSPECT CONVERTING / TRANSFORM
	* parser.y: inspect_list renamed to inspect_format_variant

2022-04-12  Ron Norman <rjn@inglenet.com>

	* cobc.c : minor code reformat

2022-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (process_translate): add length note also for value clauses
	  which may span multiple lines

2022-04-05  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: adjustments to handle relocation, especially related to
	  reasonable output in cobc --info

2022-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_translate) [HAVE_8DOT3_FILENAMES]: fixed
	  missing variable definition

2022-03-28  Ron Norman <rjn@inglenet.com>

	* cobc.c : Added calls to cobc_getenv_path which will check for
	  env var and if not present do relocation for runtime
	  Added calls to cob_relocate_string to insert -I and -L for compiler
	  installed in different location
